[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csfloat_api"
version = "1.3.0"
description = "This is an unofficial Python client library for interacting with the CSFloat API. The library allows users to programmatically access CSFloat’s listings, buy orders, user information, exchange rates, and more."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }

authors = [
  { name = "Rushifakami" }
]

dependencies = [
  "aiohttp",
  "aiohttp_socks",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Rushifakami/csfloat_api"
Repository = "https://github.com/Rushifakami/csfloat_api"

[tool.setuptools]
packages = ["csfloat_api"]
